seaqt/QtCore/gen_qabstractanimation.nim


proc fcQAbstractAnimation_new(): ptr cQAbstractAnimation {.importc: "QAbstractAnimation_new".}
proc fcQAbstractAnimation_new2(parent: pointer): ptr cQAbstractAnimation {.importc: "QAbstractAnimation_new2".}
proc fcQAbstractAnimation_metaObject(self: pointer, ): pointer {.importc: "QAbstractAnimation_metaObject".}
proc fcQAbstractAnimation_metacast(self: pointer, param1: cstring): pointer {.importc: "QAbstractAnimation_metacast".}
proc fcQAbstractAnimation_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QAbstractAnimation_metacall".}
proc fcQAbstractAnimation_tr(s: cstring): struct_miqt_string {.importc: "QAbstractAnimation_tr".}
proc fcQAbstractAnimation_trUtf8(s: cstring): struct_miqt_string {.importc: "QAbstractAnimation_trUtf8".}
proc fcQAbstractAnimation_state(self: pointer, ): cint {.importc: "QAbstractAnimation_state".}
proc fcQAbstractAnimation_group(self: pointer, ): pointer {.importc: "QAbstractAnimation_group".}
proc fcQAbstractAnimation_direction(self: pointer, ): cint {.importc: "QAbstractAnimation_direction".}
proc fcQAbstractAnimation_setDirection(self: pointer, direction: cint): void {.importc: "QAbstractAnimation_setDirection".}
proc fcQAbstractAnimation_currentTime(self: pointer, ): cint {.importc: "QAbstractAnimation_currentTime".}
proc fcQAbstractAnimation_currentLoopTime(self: pointer, ): cint {.importc: "QAbstractAnimation_currentLoopTime".}
proc fcQAbstractAnimation_loopCount(self: pointer, ): cint {.importc: "QAbstractAnimation_loopCount".}
proc fcQAbstractAnimation_setLoopCount(self: pointer, loopCount: cint): void {.importc: "QAbstractAnimation_setLoopCount".}
proc fcQAbstractAnimation_currentLoop(self: pointer, ): cint {.importc: "QAbstractAnimation_currentLoop".}
proc fcQAbstractAnimation_duration(self: pointer, ): cint {.importc: "QAbstractAnimation_duration".}
proc fcQAbstractAnimation_totalDuration(self: pointer, ): cint {.importc: "QAbstractAnimation_totalDuration".}
proc fcQAbstractAnimation_finished(self: pointer, ): void {.importc: "QAbstractAnimation_finished".}
proc fcQAbstractAnimation_connect_finished(self: pointer, slot: int) {.importc: "QAbstractAnimation_connect_finished".}
proc fcQAbstractAnimation_stateChanged(self: pointer, newState: cint, oldState: cint): void {.importc: "QAbstractAnimation_stateChanged".}
proc fcQAbstractAnimation_connect_stateChanged(self: pointer, slot: int) {.importc: "QAbstractAnimation_connect_stateChanged".}
proc fcQAbstractAnimation_currentLoopChanged(self: pointer, currentLoop: cint): void {.importc: "QAbstractAnimation_currentLoopChanged".}
proc fcQAbstractAnimation_connect_currentLoopChanged(self: pointer, slot: int) {.importc: "QAbstractAnimation_connect_currentLoopChanged".}
proc fcQAbstractAnimation_directionChanged(self: pointer, param1: cint): void {.importc: "QAbstractAnimation_directionChanged".}
proc fcQAbstractAnimation_connect_directionChanged(self: pointer, slot: int) {.importc: "QAbstractAnimation_connect_directionChanged".}
proc fcQAbstractAnimation_start(self: pointer, ): void {.importc: "QAbstractAnimation_start".}
proc fcQAbstractAnimation_pause(self: pointer, ): void {.importc: "QAbstractAnimation_pause".}
proc fcQAbstractAnimation_resume(self: pointer, ): void {.importc: "QAbstractAnimation_resume".}
proc fcQAbstractAnimation_setPaused(self: pointer, paused: bool): void {.importc: "QAbstractAnimation_setPaused".}
proc fcQAbstractAnimation_stop(self: pointer, ): void {.importc: "QAbstractAnimation_stop".}
proc fcQAbstractAnimation_setCurrentTime(self: pointer, msecs: cint): void {.importc: "QAbstractAnimation_setCurrentTime".}
proc fcQAbstractAnimation_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QAbstractAnimation_tr2".}
proc fcQAbstractAnimation_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAbstractAnimation_tr3".}
proc fcQAbstractAnimation_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QAbstractAnimation_trUtf82".}
proc fcQAbstractAnimation_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAbstractAnimation_trUtf83".}
proc fcQAbstractAnimation_start1(self: pointer, policy: cint): void {.importc: "QAbstractAnimation_start1".}
proc fQAbstractAnimation_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QAbstractAnimation_virtualbase_metaObject".}
proc fcQAbstractAnimation_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_metaObject".}
proc fQAbstractAnimation_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QAbstractAnimation_virtualbase_metacast".}
proc fcQAbstractAnimation_override_virtual_metacast(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_metacast".}
proc fQAbstractAnimation_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QAbstractAnimation_virtualbase_metacall".}
proc fcQAbstractAnimation_override_virtual_metacall(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_metacall".}
proc fcQAbstractAnimation_override_virtual_duration(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_duration".}
proc fQAbstractAnimation_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QAbstractAnimation_virtualbase_event".}
proc fcQAbstractAnimation_override_virtual_event(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_event".}
proc fcQAbstractAnimation_override_virtual_updateCurrentTime(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_updateCurrentTime".}
proc fQAbstractAnimation_virtualbase_updateState(self: pointer, newState: cint, oldState: cint): void{.importc: "QAbstractAnimation_virtualbase_updateState".}
proc fcQAbstractAnimation_override_virtual_updateState(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_updateState".}
proc fQAbstractAnimation_virtualbase_updateDirection(self: pointer, direction: cint): void{.importc: "QAbstractAnimation_virtualbase_updateDirection".}
proc fcQAbstractAnimation_override_virtual_updateDirection(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_updateDirection".}
proc fQAbstractAnimation_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QAbstractAnimation_virtualbase_eventFilter".}
proc fcQAbstractAnimation_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_eventFilter".}
proc fQAbstractAnimation_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QAbstractAnimation_virtualbase_timerEvent".}
proc fcQAbstractAnimation_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_timerEvent".}
proc fQAbstractAnimation_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QAbstractAnimation_virtualbase_childEvent".}
proc fcQAbstractAnimation_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_childEvent".}
proc fQAbstractAnimation_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QAbstractAnimation_virtualbase_customEvent".}
proc fcQAbstractAnimation_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_customEvent".}
proc fQAbstractAnimation_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QAbstractAnimation_virtualbase_connectNotify".}
proc fcQAbstractAnimation_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_connectNotify".}
proc fQAbstractAnimation_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QAbstractAnimation_virtualbase_disconnectNotify".}
proc fcQAbstractAnimation_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QAbstractAnimation_override_virtual_disconnectNotify".}
proc fcQAbstractAnimation_staticMetaObject(): pointer {.importc: "QAbstractAnimation_staticMetaObject".}
proc fcQAbstractAnimation_delete(self: pointer) {.importc: "QAbstractAnimation_delete".}
proc fcQAnimationDriver_new(): ptr cQAnimationDriver {.importc: "QAnimationDriver_new".}
proc fcQAnimationDriver_new2(parent: pointer): ptr cQAnimationDriver {.importc: "QAnimationDriver_new2".}
proc fcQAnimationDriver_metaObject(self: pointer, ): pointer {.importc: "QAnimationDriver_metaObject".}
proc fcQAnimationDriver_metacast(self: pointer, param1: cstring): pointer {.importc: "QAnimationDriver_metacast".}
proc fcQAnimationDriver_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QAnimationDriver_metacall".}
proc fcQAnimationDriver_tr(s: cstring): struct_miqt_string {.importc: "QAnimationDriver_tr".}
proc fcQAnimationDriver_trUtf8(s: cstring): struct_miqt_string {.importc: "QAnimationDriver_trUtf8".}
proc fcQAnimationDriver_advance(self: pointer, ): void {.importc: "QAnimationDriver_advance".}
proc fcQAnimationDriver_install(self: pointer, ): void {.importc: "QAnimationDriver_install".}
proc fcQAnimationDriver_uninstall(self: pointer, ): void {.importc: "QAnimationDriver_uninstall".}
proc fcQAnimationDriver_isRunning(self: pointer, ): bool {.importc: "QAnimationDriver_isRunning".}
proc fcQAnimationDriver_elapsed(self: pointer, ): clonglong {.importc: "QAnimationDriver_elapsed".}
proc fcQAnimationDriver_setStartTime(self: pointer, startTime: clonglong): void {.importc: "QAnimationDriver_setStartTime".}
proc fcQAnimationDriver_startTime(self: pointer, ): clonglong {.importc: "QAnimationDriver_startTime".}
proc fcQAnimationDriver_started(self: pointer, ): void {.importc: "QAnimationDriver_started".}
proc fcQAnimationDriver_connect_started(self: pointer, slot: int) {.importc: "QAnimationDriver_connect_started".}
proc fcQAnimationDriver_stopped(self: pointer, ): void {.importc: "QAnimationDriver_stopped".}
proc fcQAnimationDriver_connect_stopped(self: pointer, slot: int) {.importc: "QAnimationDriver_connect_stopped".}
proc fcQAnimationDriver_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QAnimationDriver_tr2".}
proc fcQAnimationDriver_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAnimationDriver_tr3".}
proc fcQAnimationDriver_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QAnimationDriver_trUtf82".}
proc fcQAnimationDriver_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QAnimationDriver_trUtf83".}
proc fQAnimationDriver_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QAnimationDriver_virtualbase_metaObject".}
proc fcQAnimationDriver_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_metaObject".}
proc fQAnimationDriver_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QAnimationDriver_virtualbase_metacast".}
proc fcQAnimationDriver_override_virtual_metacast(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_metacast".}
proc fQAnimationDriver_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QAnimationDriver_virtualbase_metacall".}
proc fcQAnimationDriver_override_virtual_metacall(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_metacall".}
proc fQAnimationDriver_virtualbase_advance(self: pointer, ): void{.importc: "QAnimationDriver_virtualbase_advance".}
proc fcQAnimationDriver_override_virtual_advance(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_advance".}
proc fQAnimationDriver_virtualbase_elapsed(self: pointer, ): clonglong{.importc: "QAnimationDriver_virtualbase_elapsed".}
proc fcQAnimationDriver_override_virtual_elapsed(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_elapsed".}
proc fQAnimationDriver_virtualbase_start(self: pointer, ): void{.importc: "QAnimationDriver_virtualbase_start".}
